--- a/index.html
+++ b/index.html
@@ -9,9 +9,37 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Document</title>
+    <title>Weather Dashboard</title>
   </head>
   <body>
+    <header class="container-fluid text-center text-white bg-dark p-3">
+      <h1>Weather DashBoard</h1>
+    </header>
+    <main class="container-fluid">
+      <div class="row">
+        <aside class="col-lg-3">
+          <h2>Search for a City:</h2>
+          <form id="form-sbt">
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                id="city-search"
+                aria-describedby="userInput"
+              />
+            </div>
+            <br />
+            <button type="button" class="btn btn-primary">Submit</button>
+          </form>
+        </aside>
+        <div class="container-fluid justify-content-end bg-dark p-5"></div>
+      </div>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="assets/script.js"></script>
   </body>
