--- a/index.html
+++ b/index.html
@@ -12,35 +12,113 @@
     <title>Weather Dashboard</title>
   </head>
   <body>
-    <header class="container-fluid text-center text-white bg-dark p-3">
+    <header class="container-fluid text-center">
       <h1>Weather DashBoard</h1>
     </header>
-    <main class="container-fluid">
+    <main class="container-fluid" id="main">
       <div class="row">
+        <!--search bar-->
         <aside class="col-lg-3">
           <h2>Search for a City:</h2>
           <form id="form-sbt">
             <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                id="city-search"
-                aria-describedby="userInput"
-              />
+              <input type="text" class="form-control" id="city-search" />
             </div>
             <br />
             <button type="button" class="btn btn-primary">Submit</button>
           </form>
+          <br />
+          <!-- History -->
+          <div id="previous" class="button col-lg-3"></div>
         </aside>
-        <div class="container-fluid justify-content-end bg-dark p-5"></div>
+        <!--current forecast-->
+        <div class="col-lg-6 align-item-center bg-secondary">
+          <h3 id="date0"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon0" />
+          </div>
+          <div>
+            <h4 id="temp0"></h4>
+            <h4 id="wind0"></h4>
+            <h4 id="humidity0"></h4>
+          </div>
+        </div>
       </div>
     </main>
+    <div class="container text-center bg-secondary" id="title">
+      <h1>5-Day Forecast</h1>
+    </div>
+    <!--5 day weather forecast-->
+    <div class="container text-center">
+      <div class="row justify-content-between">
+        <div class="col-lg-2 col-m-6 bg-secondary">
+          <h3 id="date1"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon1" />
+          </div>
+          <div>
+            <h4 id="temp1"></h4>
+            <h4 id="wind1"></h4>
+            <h4 id="humidity1"></h4>
+          </div>
+        </div>
+        <div class="col-lg-2 col-m-6 bg-secondary">
+          <h3 id="date2"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon2" />
+          </div>
+          <div>
+            <h4 id="temp2"></h4>
+            <h4 id="wind2"></h4>
+            <h4 id="humidity2"></h4>
+          </div>
+        </div>
+        <div class="col-lg-2 col-m-6 bg-secondary">
+          <h3 id="date3"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon3" />
+          </div>
+          <div>
+            <h4 id="temp3"></h4>
+            <h4 id="wind3"></h4>
+            <h4 id="humidity3"></h4>
+          </div>
+        </div>
+        <div class="col-lg-2 col-m-6 bg-secondary">
+          <h3 id="date4"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon4" />
+          </div>
+          <div>
+            <h4 id="temp4"></h4>
+            <h4 id="wind4"></h4>
+            <h4 id="humidity4"></h4>
+          </div>
+        </div>
+        <div class="col-lg-2 col-m-6 bg-secondary">
+          <h3 id="date5"></h3>
+          <div id="icon">
+            <img src="" alt="" id="wicon5" />
+          </div>
+          <div>
+            <h4 id="temp5"></h4>
+            <h4 id="wind5"></h4>
+            <h4 id="humidity5"></h4>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.js"
+      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/script.js"></script>
   </body>
 </html>
