add readme with picture and links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <!--search bar-->
         <aside class="col-lg-3">
           <h2>Search for a City:</h2>
+          <!-- <form id="form-sbt"> -->
+          <div class="form-group">
+            <input type="text" class="form-control" id="city-search" />
+          </div>
           <form id="form-sbt">
-            <div class="form-group">
-              <input type="text" class="form-control" id="city-search" />
-            </div>
             <br />
             <button type="button" class="btn btn-primary">Submit</button>
           </form>
