--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css
+"
     />
     <link rel="stylesheet" href="assets/style.css" />
     <title>Weather Dashboard</title>
@@ -33,7 +34,7 @@
           <div id="previous" class="button col-lg-3"></div>
         </aside>
         <!--current forecast-->
-        <div class="col-lg-6 align-item-center bg-secondary">
+        <div class="col-lg-6 align-item-center bg-dark-subtle rounded-4">
           <h3 id="date0"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon0" />
@@ -46,13 +47,16 @@
         </div>
       </div>
     </main>
-    <div class="container text-center bg-secondary" id="title">
+    <div
+      class="container text-center text-white bg-secondary rounded-5"
+      id="title"
+    >
       <h1>5-Day Forecast</h1>
     </div>
     <!--5 day weather forecast-->
     <div class="container text-center">
       <div class="row justify-content-between">
-        <div class="col-lg-2 col-m-6 bg-secondary">
+        <div class="col-lg-2 col-m-6 bg-dark-subtle rounded-3">
           <h3 id="date1"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon1" />
@@ -63,7 +67,7 @@
             <h4 id="humidity1"></h4>
           </div>
         </div>
-        <div class="col-lg-2 col-m-6 bg-secondary">
+        <div class="col-lg-2 col-m-6 bg-dark-subtle rounded-3">
           <h3 id="date2"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon2" />
@@ -74,7 +78,7 @@
             <h4 id="humidity2"></h4>
           </div>
         </div>
-        <div class="col-lg-2 col-m-6 bg-secondary">
+        <div class="col-lg-2 col-m-6 bg-dark-subtle rounded-3">
           <h3 id="date3"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon3" />
@@ -85,7 +89,7 @@
             <h4 id="humidity3"></h4>
           </div>
         </div>
-        <div class="col-lg-2 col-m-6 bg-secondary">
+        <div class="col-lg-2 col-m-6 bg-dark-subtle rounded-3">
           <h3 id="date4"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon4" />
@@ -96,7 +100,7 @@
             <h4 id="humidity4"></h4>
           </div>
         </div>
-        <div class="col-lg-2 col-m-6 bg-secondary">
+        <div class="col-lg-2 col-m-6 bg-dark-subtle rounded-3">
           <h3 id="date5"></h3>
           <div id="icon">
             <img src="" alt="" id="wicon5" />
